force-app/main/default/objects/Provider_DME__c/Provider_DME__c.object-meta.xml
<CustomObject>
    <label>Provider DME</label>
    <nameField>
        <label>Provider DME Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Provider DME</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>