force-app/main/default/objects/Provider_DME__c/fields/DME__c.field-meta.xml
<CustomField>
    <fullName>DME__c</fullName>
    <label>DME</label>
    <referenceTo>DME__c</referenceTo>
    <relationshipLabel>Provider DME</relationshipLabel>
    <relationshipName>Provider_DME</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>