force-app/main/default/objects/Provider_DME__c/fields/DME_Name__c.field-meta.xml
<CustomField>
    <fullName>DME_Name__c</fullName>
    <formula>DME__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DME Name</label>
    <type>Text</type>
</CustomField>