force-app/main/default/objects/Provider_DME__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <label>Provider</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CareCloud_Information__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Provider</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CareCloud_Information__c</referenceTo>
    <relationshipLabel>Provider DME</relationshipLabel>
    <relationshipName>Provider_DME</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>